[package]
name = "runCommandCloudflareST"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
serde_yaml = "0.9"
serde_qs = "0.13.0"
urlencoding = "2.1.3"
csv = "1.3"
clipboard = "0.5.0"

# [[bin]]
# name = "app"
# path = "test/demo5.rs"

# [[bin]]
# name = "v1"
# path = "src/v1.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"
